--- a/client/src/Components/Landing/Landing.css
+++ b/client/src/Components/Landing/Landing.css
@@ -1,16 +1,15 @@
 .LandingBannerText{
     font-family: 'Roboto', sans-serif;
     color: #F45050;
+    margin-left: -5rem;
 }
-.wave{
-    overflow-x: hidden;
-    max-width: 100%;
-}
+
 .LandingPageSecondText{
     width: 20rem;
     margin: auto;
     color: #3C486B;
     text-align: center;
+    margin-left: 13rem;
 }
 .bannerImg{
     height: 20rem;
@@ -29,7 +28,21 @@
     
 }
 
+#lin{
+    color: aliceblue;
+    text-decoration: none;
+}
+#lin:hover{
+    cursor: pointer;
+
+}
+
+#link{
+    color: #3C486B;
+    text-decoration: none;
+    font-weight: bold;
+}
 
 .landingMainContainer{
-    margin-left: 30rem;
+    margin-left: 40rem;
 }
